--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -5,16 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-
     <script src="http://code.createjs.com/easeljs-0.6.0.min.js"></script>
-
     <script src="../node_modules/underscore/underscore-min.js"></script>
     <script src="../libs/Three/build/three.js"></script>
-    <script src="../libs/Three/examples/js/modifiers/SubdivisionModifier.js"></script>
+
+    <script src="../libs/planet/VertCatCol.js"></script>
+    <script src="../libs/planet/VertCatRow.js"></script>
+    <script src="../libs/planet/Vertices.js"></script>
+    <script src="../libs/planet/planet_filter.js"></script>
+
+
     <script src="../libs/Three/examples/js/controls/TrackballControls.js"></script>
-    <script src="../GeoSubDivModifier.js"></script>
     <script src="../libs/Three/examples/js/Detector.js"></script>
     <!-- https://github.com/mrdoob/stats.js -->
     <script src="../libs/Three/examples/js/libs/stats.min.js"></script>
