--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -31,6 +31,11 @@
 <body>
 <!-- three.js container -->
 <div id="container"></div>
+<!-- a box for texture inspection -->
+<div id="map">
+    <canvas id="map_canvas"></canvas>
+</div>
+<!-- a red box for panning the globe -->
 <div id="cursor"></div>
 <!-- info on screen display -->
 <div id="info">
